# twstock-kline-mpc-control

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: backtest_2330.md  data_provenance.md  experimental_protocol.md  figures.md  holdout_2330.md  multi_stock_backtest.md  realtime_data.md  revised_proposal.md
figures/: gen_fig_backtest_publication.py
scripts/: validate_data_provenance.py
src/twstock_kline_mpc_control/: __init__.py  backtest.py  cli.py  data.py  indicators.py  mpc.py  training.py
tests/: test_backtest.py  test_data.py  test_indicators.py  test_mpc.py  test_training.py
